--- a/index.html
+++ b/index.html
@@ -58,10 +58,13 @@
       <div class="card-body">
     
         <p>
-          My name is Leonardo Carrizales. I am a student at <a href="http://devmission.org/" target="_blank">dev/Mission</a> for the Fall 2019 cohourt in San Francisco's Mission Districrt. My current process inolves the study of IoT, I.T., Critical Skills, and coding in CSS, HTML and Javascript.  
+          My name is Leonardo Carrizales. I am a student at <a href="http://devmission.org/" target="_blank">dev/Mission</a> for the Fall 2019 cohourt in San Francisco's Mission District. My current process inolves the study of IoT, I.T., Critical Career Skills, and coding in HTML, CSS and Javascript.  
         </p>
         <p>
-           I have a Bachelor's Degree from San Francisco State University with a degree in Studio Art. I currently practice my craft in mediums of graphite, charcoal, ink and goauche. Thus, my current objective is to learn the process of graphic design and illustration. Therefore, with my skills in the studies of the world of technology, I hope to take my current artistry to the next tier. Down below you will see samples of my work.     
+           I graduated from San Francisco State University with a Bachelor's degree in Studio Art. I currently practice my craft in mediums of graphite, charcoal, ink and goauche. Thus, my current objective is to learn the process of graphic design and illustration. Therefore, with my skills in the studies of the world of technology, I hope to take my current artistry to the next tier.
+        </p>
+        <p>
+          Down below you will see samples of my work.     
         </p>
         
       </div>
@@ -81,7 +84,7 @@
 </main><!-- /.container -->
 <footer class="page-footer">
 
-    <div class="container row">
+    <div class="container row2">
       <a class="white-text" href="mailto:leoc@mail.sfsu.edu">leoc@mail.sfsu.edu</a>
       <a class="white-text" href=""></a>
   
