--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
         <div class='card1'>
           <div class="card-body">
-           <a href="3E30E936-EFF3-4482-A557-51866BFBE0C2.jpeg" target="_blank"><img src="3E30E936-EFF3-4482-A557-51866BFBE0C2.jpeg" width="200m" height="260em" class="manequinpainting"></a>
+           <a href="Mannequin.jpg" target="_blank"><img src="Mannequin.jpg" width="200m" height="260em" class="manequinpainting"></a>
            <a href="self-portrait.jpeg" target="_blank"><img src="self-portrait.jpeg" width="200em" height="260em" class="portrait"/></a>
            <a href="Moon Escapage.JPG" target="_blank"><img src="Moon Escapage.JPG" width="200em" height="260em"/>
            <a href="Caravaggio.JPG" target="_blank"><img src="Caravaggio.JPG" width="200em" height="260em"/>
@@ -80,13 +80,15 @@
     
    
   </div>
-  
+
+
 </main><!-- /.container -->
+<br><br>  <br><br>
 <footer class="page-footer">
 
     <div class="container row2">
       <a class="white-text" href="mailto:leoc@mail.sfsu.edu">leoc@mail.sfsu.edu</a>
-      <a class="white-text" href=""></a>
+      <a href="https://www.linkedin.com/in/leonardo-carrizales-duarte-216408120/" target="_blank"><img src="https://www.clipartmax.com/png/middle/257-2578738_linkedin-png-3-buy-clip-art-transparent-background-linkedin-logo-black.png" width="60em" height="24em" class="LinKED"></a>
   
   
   
@@ -99,7 +101,7 @@
         ©2019 
       </div>
     </div>
-    
+   
   </footer>
 
 </body>
