--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 <footer class="page-footer">
 
     <div class="container row2">
-      <a class="white-text" href="mailto:leoc@mail.sfsu.edu">leoc@mail.sfsu.edu</a>
-      <a href="https://www.linkedin.com/in/leonardo-carrizales-duarte-216408120/" target="_blank"><img src="https://www.clipartmax.com/png/middle/257-2578738_linkedin-png-3-buy-clip-art-transparent-background-linkedin-logo-black.png" width="60em" height="24em" class="LinKED"></a>
+      <a href="mailto:leoc@mail.sfsu.edu" target="_blank"><img src="https://www.pinpng.com/pngs/m/268-2683600_office-of-information-technology-office-png-outlook-new.png" width="30em"height="30em"class="outlook"></a>
+      <a href="https://www.linkedin.com/in/leonardo-carrizales-duarte-216408120/" target="_blank"><img src="https://www.clipartmax.com/png/middle/257-2578738_linkedin-png-3-buy-clip-art-transparent-background-linkedin-logo-black.png" width="80em" height="30em" class="LinKED"></a>
   
   
   
