--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
  
 </head>
 
-<body>
+<body style="background-image: url('https://raw.githubusercontent.com/fangdarro/leocarrizaleshtmlresumev4/master/background.jpg');">
+
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <a class="navbar-brand" href="#">Leonardo Carrizales</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
