--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  
 </head>
 
-<body style="background: url(https://raw.githubusercontent.com/fangdarro/leocarrizaleshtmlresumev4/master/background.jpg);">
+<body >
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <a class="navbar-brand" href="#">Leonardo Carrizales</a>
